On limite à nouveau la persistence du filtre région/discipline ǎ l'accueil et ǎ la recherche globale.

--- a/auf_savoirs_en_partage/templates/chercheurs/index.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/index.html
@@ -2,7 +2,6 @@
 {% load pagination_tags %}
 {% load sorting_tags %}
 {% load form_tags %}
-{% load sep %}
 
 {% block contenu %}
 {% autosort chercheurs %}
@@ -29,7 +28,7 @@
     Dans le cadre de la programmation quadriennale, la politique scientifique de
     l'AUF s'appuie sur la mise en œuvre de projets inter-universitaires
     régionaux ou internationaux. Les <i>réseaux de chercheurs</i> ne sont plus
-    le critère d'organisation du répertoire (consulter la <a href="{% sep_url chercheurs.views.conversion %}">table de passage</a>). 
+    le critère d'organisation du répertoire (consulter la <a href="{% url chercheurs.views.conversion %}">table de passage</a>). 
     Les chercheurs précisent leur discipline et choissent leurs centres
     d'intérêt dans des listes prédéfinies, et ajoutent des mots-clés pour
     affiner leur profil scientifique.
@@ -71,7 +70,7 @@
         </tr>
     {% for chercheur in chercheurs %}
         <tr class="{% cycle 'odd' 'notodd' %}">
-            <td><a href="{% sep_url chercheurs.views.retrieve id=chercheur.id %}">{{ chercheur }}</a></td>
+            <td><a href="{% url chercheurs.views.retrieve id=chercheur.id %}">{{ chercheur }}</a></td>
             <td>{% firstof chercheur.etablissement chercheur.etablissement_autre_nom %}</td>
             <td>{% firstof chercheur.etablissement.pays chercheur.etablissement_autre_pays %}</td>
         </tr>
