--- a/auf_savoirs_en_partage/templates/savoirs/a-propos.html
+++ b/auf_savoirs_en_partage/templates/savoirs/a-propos.html
@@ -1,5 +1,4 @@
 {% extends "container_base.html" %}
-{% load sep %}
 
 {% block contenu %}
 <h4>À propos de</h4>
@@ -15,7 +14,7 @@ Ainsi, vous pourrez accéder depuis ce portail à :
 </p>
 </div>
 
-<h5><a href="{% sep_url chercheurs.views.index %}">... un répertoire des chercheurs</a></h5>
+<h5><a href="{% url chercheurs.views.index %}">... un répertoire des chercheurs</a></h5>
 
 <div class="texte">
 <p>
@@ -23,7 +22,7 @@ Le répertoire présente une base de données de plus de 7000 chercheurs, étudi
 </p>
 </div>
 
-<h5><a href="{% sep_url savoirs.views.evenement_index %}">... un agenda scientifique</a></h5>
+<h5><a href="{% url savoirs.views.evenement_index %}">... un agenda scientifique</a></h5>
 
 <div class="texte">
 <p> 
@@ -32,7 +31,7 @@ C'est aussi un outil de communication et de veille au service des universitaires
 </p>
 </div>
 
-<h5><a href="{% sep_url savoirs.views.ressource_index %}">... des ressources scientifiques</a></h5>
+<h5><a href="{% url savoirs.views.ressource_index %}">... des ressources scientifiques</a></h5>
 
 <div class="texte">
 <p>
@@ -40,7 +39,7 @@ Le portail « Savoirs en partage » s'inscrit dans la continuité des différe
 </p>
 </div>
 
-<h5><a href="{% sep_url sitotheque.views.index %}">... une sitothèque</a></h5>
+<h5><a href="{% url sitotheque.views.index %}">... une sitothèque</a></h5>
 
 <div class="texte">
 <p>
@@ -48,7 +47,7 @@ Les sites retenus ici ont été créés en partenariat par l'AUF et des universi
 </p>
 </div>
 
-<h5><a href="{% sep_url savoirs.views.actualite_index %}">... des actualités scientifiques</a></h5>
+<h5><a href="{% url savoirs.views.actualite_index %}">... des actualités scientifiques</a></h5>
 
 <div class="texte">
 <p>
