Activités en Francophonie: recherche par mots-clés.

--- a/auf_savoirs_en_partage/templates/chercheurs/fiche.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/fiche.html
@@ -72,7 +72,7 @@
         {% endif %}
     </table>
 
-    {% if chercheur.membre_instance_auf or chercheur.expert_oif or chercheur.membre_fipf %}
+    {% if chercheur.membre_instance_auf or chercheur.expert_oif or chercheur.membre_association_francophone or chercheur.membre_reseau_institutionnel %}
     <h5>Activités en Francophonie</h5>
     <table>
         {% if chercheur.membre_instance_auf %}
