Modification de texte
Demande #728

--- a/auf_savoirs_en_partage/templates/chercheurs/index.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/index.html
@@ -26,10 +26,12 @@
     Dans le cadre de la programmation quadriennale, la politique scientifique de
     l'AUF s'appuie sur la mise en œuvre de projets inter-universitaires
     régionaux ou internationaux. Les <i>réseaux de chercheurs</i> ne sont plus
-    le critère d'organisation du répertoire (consulter la <a href="{% url chercheurs.views.conversion %}">table de passage</a>). 
-    Les chercheurs précisent leur discipline et choissent leurs centres
-    d'intérêt dans des listes prédéfinies, et ajoutent des mots-clés pour
-    affiner leur profil scientifique.
+    le critère d'organisation du répertoire (consulter la 
+    <a href="{% url chercheurs.views.conversion %}">table de passage</a>).  Les chercheurs
+    précisent leur discipline et choissent leurs centres
+    d'intérêt dans des listes prédéfinies ou non (thèmes de recherche, groupes
+    de recherche), et ajoutent des mots-clés pour affiner leur profil
+    scientifique.
     </p>
 </div>
 
