--- a/auf_savoirs_en_partage/media/css/global.css
+++ b/auf_savoirs_en_partage/media/css/global.css
@@ -44,7 +44,7 @@ sup{font-size:smaller; vertical-align:0.5em; line-height:1px;}
 td ul { margin:0 }
 
 form { padding-right:20px; margin:1em 0; }
-form td { vertical-align:top }
+form td, form th { vertical-align:top }
 form th { width:20em; text-align:left; font-weight:bold }
 form table { width:100% }
 form input[type=text] { width:20em }
@@ -60,10 +60,8 @@ legend { font-size:150%; font-weight:bold; color:#000000; margin:0 0 0 0; paddin
 label {
   font-size:12px;
 }
-td, th
-{
-vertical-align:middle;
-}
+
+td, th { vertical-align:middle; padding: 5px }
 
 
 .box { padding:0 0 20px 0; }
@@ -210,7 +208,6 @@ ul.actions { position:absolute; top:15px; right:20px; width:30%; text-align:righ
 .odd { background:#ddd; }
 
 #repertoire { border:1px solid #bbb; padding:20px; margin:10px; width:95% }
-#repertoire th, td { padding:5px }
 
 
 .errorlist { color:red; margin:0 }
