Point à la fin des références bibliographiques.

--- a/auf_savoirs_en_partage/templates/chercheurs/publication_display.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/publication_display.html
@@ -5,7 +5,7 @@
         {{publication.annee}}{% endif %}{% if publication.editeur %}, 
         {{publication.editeur}}{% endif %}{% if publication.lieu_edition %}, 
         {{publication.lieu_edition}}{% endif %}{% if publication.nb_pages %}, 
-        {{publication.nb_pages}} pages{% endif %}
+        {{publication.nb_pages}} pages{% endif %}.
         {% if publication.url %}<br />{{publication.url}}{% endif %}
     </td>
 {% else %}
