Nouveaux champs dans "Activités en Francophonie".

--- a/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/chercheur_form.html
@@ -50,8 +50,11 @@
     <legend>Activités en Francophonie</legend>
     <table class="horizontal-radio-buttons">
         {% form_field forms.chercheur.membre_instance_auf %}
+        {% form_field forms.chercheur.membre_instance_auf_details %}
         {% form_field forms.chercheur.membre_instance_auf_dates %}
         {% form_field forms.chercheur.expert_oif %}
+        {% form_field forms.chercheur.expert_oif_details %}
+        {% form_field forms.chercheur.expert_oif_dates %}
         {% form_field forms.chercheur.membre_association_francophone %}
         {% form_field forms.chercheur.membre_association_francophone_details %}
         {% form_field forms.chercheur.membre_reseau_institutionnel %}
