Remplacé "bêta" par "version bêta".
Demande #762

--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -76,7 +76,7 @@
                 </div>
 
                 <div id="sep-recherche">
-                    <h2 class="slogan">Savoirs en partage <span style="display:inline; color:#db602f;">bêta</span>
+                    <h2 class="slogan">Savoirs en partage <span style="display:inline; color:#db602f;">version bêta</span>
                         <span>Le portail des ressources scientifiques<br />et pédagogiques de l'AUF</span>
                     </h2>
 
