Rendre l'URL des publications cliquable.
Demande #754

--- a/auf_savoirs_en_partage/templates/chercheurs/publication_display.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/publication_display.html
@@ -6,7 +6,9 @@
         {{publication.editeur}}{% endif %}{% if publication.lieu_edition %}, 
         {{publication.lieu_edition}}{% endif %}{% if publication.nb_pages %}, 
         {{publication.nb_pages}} pages{% endif %}.
-        {% if publication.url %}<br />{{publication.url}}{% endif %}
+        {% if publication.url %}
+        <br /><a href="{{ publication.url }}">{{ publication.url }}</a>
+        {% endif %}
     </td>
 {% else %}
     {% if publication.publication_affichage %}
