--- a/auf_savoirs_en_partage/templates/savoirs/sites_auf.html
+++ b/auf_savoirs_en_partage/templates/savoirs/sites_auf.html
@@ -10,7 +10,7 @@
 
 <h4>Sites &#8212; Sites AUF</h4>
 <div class="zone-texte">
-    <form method="get" action="" class="contenu-wrapper">
+    <form method="get" action="">
         <p style="margin-top: 10px;"><input type="text" size="40" name="q" value="{{ google_q|default:""}}" /><input type="submit" name="" value="Chercher" /></p>
     </form>
 
