--- a/auf_savoirs_en_partage/media/css/global.css
+++ b/auf_savoirs_en_partage/media/css/global.css
@@ -36,7 +36,6 @@ h6 {font-size:1em;margin:0 0 1em 0;}
 em{font-style:italic;}
 strong{font-weight:bold;}
 p{margin:0 0 1em 0;}
-ul, ol{margin:0 0 1em 33px;list-style:none;}
 dt{margin:0.5em 0 0;}
 dd{margin:0.25em 0 0.5em 2.5em;}
 sup{font-size:smaller; vertical-align:0.5em; line-height:1px;}
@@ -64,7 +63,6 @@ label {
 td, th { vertical-align:middle; padding: 5px }
 
 
-.box { padding:0 0 20px 0; }
 .lbl {color:#97012c; }
 
 .centre { text-align:center }
@@ -108,22 +106,9 @@ div.boite-recherche p a:hover { color:#97012c; text-decoration:none;}
 #col-menu li.active a, #col-menu a:hover { background:#d5d5d5; margin-left:0; border-left: 5px solid #666; }
 #col-menu .actif a { color:#97012c; font-weight:bold; }
 
-#contenu { 
-    float:left; position:relative; width:744px; 
-    margin:100px 0px 50px 0px; padding:0; 
-    background:url(../img/contenu-bkg-middle.png) repeat-y 0 0; 
-}
-
 #tabs { margin-left:8px; margin-right:8px; }
 
-#contenu h4 { padding:0 25px; margin-bottom:0.4em; font-size:2.2em; font-weight:normal; letter-spacing:-1px; width:60%; }
-#contenu h4 a { text-decoration:none; color:black; }
-#contenu h4 a:hover { text-decoration:underline; }
-#contenu h5 { padding:10px 0 0 25px; margin-bottom:0.4em; font-size:1.8em; font-weight:normal; letter-spacing:-1px; }
-#contenu h5 a { text-decoration:none; color:black; }
-#contenu h5 a:hover { text-decoration:underline; }
-
-#contenu .zone-texte {padding:0 25px; font-size:1.2em; min-height:375px;}
+#contenu .zone-texte { font-size:1.2em; min-height:375px;}
 #contenu .zone-texte ul li {list-style:disc; margin:0 0 .25em;}
 #contenu .zone-texte ol li {list-style:decimal; margin:0 0 .25em;}
 #contenu .zone-texte ul ul, #contenu .zone-texte ol ol {margin-top:.25em; margin-bottom:.25em;}
@@ -131,7 +116,7 @@ div.boite-recherche p a:hover { color:#97012c; text-decoration:none;}
 #contenu .zone-texte h3 {font-size:1.1em;}
 #contenu .zone-texte blockquote {margin:0 2em 1em; font-style:italic;}
 
-#contenu .texte { padding:0 25px; font-size:1.2em; }
+#contenu .texte { font-size:1.2em; }
 #contenu .texte ul li { list-style:disc; margin:0 0 .25em; }
 #contenu .texte ol li { list-style:decimal; margin:0 0 .25em; }
 #contenu .texte ul ul, #contenu .description ol ol  { margin-top:.25em; margin-bottom:.25em; }
@@ -141,10 +126,6 @@ div.boite-recherche p a:hover { color:#97012c; text-decoration:none;}
 
 #contenu img.top, .resultats img.top { height:10px; position:relative; top:-10px; left:0;}
 #contenu img.bottom, .resultats img.bottom{ height:10px; position:relative; bottom:-10px; left:0;}
-#contenu .demi-gauche { width:361px; margin-left:12px; background-color:#f5f5f5; float:left;}
-#contenu .demi-droite { width:358px; margin-right:12px; float:right;}
-#contenu .demi-gauche img.top { height:9px; position:relative; top:-9px;}
-#contenu .demi-gauche img.bottom { height:9px;  position:relative; bottom:-9px;}
 
 .contenu-wrapper { padding:0 25px; }
 
@@ -160,9 +141,6 @@ ul.liste-de-l-accueil a.la-date { color:black; }
 ul.liste-de-l-accueil .le-titre {display:block; font-size:1.2em; font-weight:bold; margin:.25em 0;}
 ul.liste-de-l-accueil .le-resume {font-size:1.1em;}
 ul.liste-de-l-accueil .le-resume a { display:inline;}
-ul.sous-menu li, ul.actions li { display:inline; padding:0px 0px 0px 10px; font-size:1.1em; }
-
-ul.actions { position:absolute; top:15px; right:20px; width:30%; text-align:right }
 
 .resultats { width:744px; display:inline; margin:0; padding:0; float:left; margin-top:100px; margin-bottom:50px; margin-left:0; background:url(../img/contenu-bkg-middle.png) repeat-y 0 0;}
 .resultats a:hover{text-decoration:none;}
@@ -215,9 +193,6 @@ ul.actions { position:absolute; top:15px; right:20px; width:30%; text-align:righ
 
 .publications_autre {border:1px solid #CCC; background:#FAFAFA; margin:10px; padding:10px; display:none;}
 
-#agenda, #actualites {position:relative;}
-#rss-agenda, #rss-actualites {position:absolute; right:26px; top:10px;}
-
 .infotip
 {
 width:300px;
@@ -229,31 +204,6 @@ float:right;
 .publication
 {
 
-}
-#fiche_chercheur
-{
-  font-size:120%;
-}
-#fiche_chercheur h5
-{
-  font-size:150%;
-  border-color:#000000;
-  border-width:1px 0 0 0;
-  border-style:solid none none none;
-  margin-top:20px;
-  padding:10px;
-}
-
-#fiche_chercheur .label
-{
-color:grey;
-font-weight:bold;
-width:150px;
-}
-
-#fiche_chercheur .souligne
-{
-  border-bottom:1px solid #DDD;
 }
 
 .message
@@ -277,3 +227,44 @@ color:red;
 
 .delete-row { position:absolute; top:10px; right:10px }
 .add-row { float:right; margin-right:21px }
+
+.cadre { width: 60%; margin: 100px auto; padding: 20px; background: #f9f9f9; border: 1px solid #aaa }
+
+/* Boîte principale */
+
+#boite-principale { position: absolute; top: 280px; width: 744px; 
+                    background: url(../img/contenu-bkg-middle.png) repeat-y 0 0; }
+#boite-principale .top-border { position: absolute; top: -10px; }
+#boite-principale .bottom-border { position: absolute; bottom: -10px; }
+                    
+#flash-message { margin: 10px 20px; background: #f3e3e7; color: #b03d5e; padding: 1em; font-size: 120%;
+                 border: 1px solid #b03d5e; -moz-border-radius: 5px; -webkit-border-radius: 5px; }
+#contenu { position: relative; padding: 20px; }
+
+/* Contenu */
+
+#contenu h4 { margin-bottom: 4px; font-size: 220%; font-weight: normal; letter-spacing: -1px; }
+#contenu h4 a { text-decoration:none; color:black; }
+#contenu h4 a:hover { text-decoration:underline; }
+#contenu h5 { margin-bottom: 4px; font-size: 180%; font-weight: normal; letter-spacing: -1px; }
+#contenu h5 a { text-decoration:none; color:black; }
+#contenu h5 a:hover { text-decoration:underline; }
+
+#fiche_chercheur { font-size: 120%; }
+#fiche_chercheur h5 { font-size: 150%; border-color: #000000; border-width: 1px 0 0 0; 
+                      border-style: solid none none none; margin-top: 20px; padding: 10px; }
+#fiche_chercheur .label { color: grey; font-weight: bold; width: 150px; }
+#fiche_chercheur .souligne { border-bottom: 1px solid #DDD; }
+
+/* Actions */
+
+.actions { float: right; text-align: right }
+.box .actions { float: none; text-align: left; margin-left: 0; list-style-type: none }
+.box .actions li { display: inline; padding-right: 10px; font-size: 110%; }
+
+/* Page d'accueil */
+
+.box { position: relative; padding: 10px 20px; }
+.demi-gauche { width: 345px; background-color: #f5f5f5; float: left; }
+.demi-droite { width: 345px; float: right; }
+#rss-agenda, #rss-actualites { position: absolute; top: 15px; right: 20px; }
