--- a/auf_savoirs_en_partage/templates/savoirs/actualite_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/actualite_index.html
@@ -5,15 +5,13 @@
 {% block contenu %}
 {% autopaginate actualites 10 %}
 
-<h4>Actualités</h4>
-
-<ul class="actions">
-    <li><a href="/rss/actualites"><img src="/media/img/feed.png" /></a></li>
-</ul>
+<h4>
+    Actualités <a href="/rss/actualites"><img src="/media/img/feed.png" alt="fil RSS"/></a>
+</h4>
 
 <h5>Recherche</h5>
 
-<form action="" method="get" class="contenu-wrapper">
+<form action="" method="get">
     <table>
     {{ search_form.as_table }}
     <tr><th></th><td><input type="submit" value="Rechercher" /></td></tr>
@@ -22,11 +20,9 @@
 
 <h5>Résultats : {{ nb_resultats }} actualités correspondant à votre recherche</h5>
 
-<div  class="contenu-wrapper">
-    <div class="centre">{% paginate %}</div>
-    {% for actualite in actualites %}
-        {% include "savoirs/actualite_resultat.html" %}
-    {% endfor %}
-    <div class="centre">{% paginate %}</div>
-</div>
+<div class="centre">{% paginate %}</div>
+{% for actualite in actualites %}
+{% include "savoirs/actualite_resultat.html" %}
+{% endfor %}
+<div class="centre">{% paginate %}</div>
 {% endblock %}
