--- a/auf_savoirs_en_partage/templates/savoirs/evenement_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/evenement_index.html
@@ -3,12 +3,10 @@
 
 {% block contenu %}
 {% autopaginate evenements 10 %}
-<h4>Agenda</h4>
-
 <ul class="actions">
     {% include "savoirs/evenement_actions.html" %}
-    <li><a href="/rss/agenda"><img src="/media/img/feed.png" /></a></li>
 </ul>
+<h4>Agenda <a href="/rss/agenda"><img src="/media/img/feed.png" alt="fil RSS" /></a></h4>
 
 <div class="texte">
     <p>
@@ -21,7 +19,7 @@
 </div>
 
 <h5>Recherche</h5>
-    <form action="" method="get" class="contenu-wrapper">
+    <form action="" method="get">
     <table>
     {{ search_form.as_table }}
     <tr><th></th><td><input type="submit" value="Rechercher" /></td></tr>
@@ -30,11 +28,9 @@
 
 <h5>Résultats : {{ nb_resultats }} évènements correspondant à votre recherche</h5>
 
-<div class="contenu-wrapper">
-    <div class="centre">{% paginate %}</div>
-    {% for evenement in evenements %}
-    {% include "savoirs/evenement_resultat.html" %}
-    {% endfor %}
-    <div class="centre">{% paginate %}</div>
-</div>
+<div class="centre">{% paginate %}</div>
+{% for evenement in evenements %}
+{% include "savoirs/evenement_resultat.html" %}
+{% endfor %}
+<div class="centre">{% paginate %}</div>
 {% endblock %}
