--- a/auf_savoirs_en_partage/templates/savoirs/ressource_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/ressource_index.html
@@ -21,7 +21,7 @@
 
 <h5>Recherche</h5>
 
-<form action="" method="get" class="contenu-wrapper">
+<form action="" method="get">
     <table>
     {{ search_form.as_table }}
     <tr><th></th><td><input type="submit" value="Rechercher" /></td></tr>
