--- a/auf_savoirs_en_partage/media/css/global.css
+++ b/auf_savoirs_en_partage/media/css/global.css
@@ -53,7 +53,7 @@ form p { margin-bottom:2px }
 fieldset { clear:both; padding:10px; margin:0 0 0 0; position:relative }
 fieldset { border-color:#000000; border-width:1px 0 0 0; border-style:solid none none none; }
 fieldset { font-size:100%; }
-fieldset fieldset { border:1px solid #ccc; background:#fafafa; margin:10px }
+fieldset fieldset { border:1px solid #ccc; background:#fafafa; margin:10px; padding: 15px; }
 legend { font-size:150%; font-weight:bold; color:#000000; margin:0 0 0 0; padding:0 5px; }
 
 label {
@@ -225,8 +225,8 @@ color:red;
 .horizontal-radio-buttons ul { margin-left:0 }
 .horizontal-radio-buttons li { display:inline }
 
-.delete-row { position:absolute; top:10px; right:10px }
-.add-row { float:right; margin-right:21px }
+.delete-row { position:absolute; top:5px; right:5px }
+.add-row { float:right; margin-right:16px }
 
 .cadre { width: 60%; margin: 100px auto; padding: 20px; background: #f9f9f9; border: 1px solid #aaa }
 
