--- a/auf_savoirs_en_partage/templates/chercheurs/edit.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/edit.html
@@ -7,60 +7,8 @@
 
 {% block contenu %}
 <h4>{{chercheur.personne.prenom}} {{chercheur.personne.nom}}</h4>
-<form method="post">
+<form method="post" action="">
     {% include "chercheurs/chercheur_form.html" %}    
-    <fieldset>
-        <legend>Publications</legend>
-        <div>
-            <div class="infotip">
-              <strong>Renseignements préalablements enregistrés</strong>
-              <p>{{forms.publication1.instance.publication_affichage|default:"-"}}</p>
-            </div>
-            <div class="publication">
-              {% with forms.publication1 as form %}
-                  {% include "table_form.html" %}
-              {% endwith %}
-            </div>
-            <div style="clear:both"></div>
-        </div>
-        <p id="show_publications">+ Autres publications</p>
-        <div class="publications_autre">
-            <h6>- Publication 2</h6>
-            <div class="infotip">
-              <strong>Renseignements préalablements enregistrés</strong>
-              <p>{{forms.publication2.instance.publication_affichage|default:"-"}}</p>
-            </div>
-            <div class="publication">
-                {% with forms.publication2 as form %}
-                    {% include "table_form.html" %}
-                {% endwith %} 
-            </div>
-            <div style="clear:both"></div>
-            <h6>- Publication 3</h6>
-            <div class="infotip">
-              <strong>Renseignements préalablements enregistrés</strong>
-              <p>{{forms.publication3.instance.publication_affichage|default:"-"}}</p>
-            </div>
-            <div class="publication">
-                {% with forms.publication3 as form %}
-                    {% include "table_form.html" %}
-                {% endwith %}
-            </div>
-            <div style="clear:both"></div>     
-            <h6>- Publication 4</h6>
-            <div class="infotip">
-              <strong>Renseignements préalablements enregistrés</strong>
-              <p>{{forms.publication4.instance.publication_affichage|default:"-"}}</p>
-            </div>
-            <div class="publication">
-                {% with forms.publication4 as form %}
-                    {% include "table_form.html" %}
-                {% endwith %}
-            </div>
-            <div style="clear:both"></div>
-        </div>
-    </fieldset>
-
     <input type="submit" value="Sauvegarder" />
 </form>
 {% endblock %}
