Changé le libellé "Expert de l'OIF" dans la fiche du chercheur.
Demande #793

--- a/auf_savoirs_en_partage/templates/chercheurs/fiche.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/fiche.html
@@ -83,7 +83,7 @@
         {% endif %}
         {% if chercheur.expert_oif %}
         <tr>
-            <td class="label">Expert de l'OIF</td>
+            <td class="label">A déjà été sollicité par l'OIF</td>
             <td>{{ chercheur.expert_oif_details }}, {{ chercheur.expert_oif_dates }}</td>
         </tr>
         {% endif %}
