Ajout d'une case à cocher à l'inscription pour confirmer que les renseignements sont exacts.

--- a/auf_savoirs_en_partage/templates/chercheurs/inscription.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/inscription.html
@@ -1,4 +1,5 @@
 {% extends "container_base.html" %}
+{% load form_tags %}
 
 {% block extra-script %}
 <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.formset.js"></script>
@@ -10,6 +11,15 @@
 
 <form method="post">
     {% include "chercheurs/chercheur_form.html" %}   
+    <table>
+        <tr>
+            <td>{{ forms.chercheur.attestation }}</td>
+            <td>
+                {{ forms.chercheur.attestation.label_tag }}
+                {{ forms.chercheur.attestation.errors }}
+            </td>
+        </tr>
+    </table>
     <input type="submit" name="Submit" value="Inscription" class="bouton" />
 </form>
 {% endblock %}
