--- a/auf_savoirs_en_partage/templates/chercheurs/publication_display.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/publication_display.html
@@ -1,5 +1,6 @@
 {% if publication.titre %}
     <td class="souligne">
+        {% if publication.auteurs %}{{ publication.auteurs }},{% endif %}
         <i>{{publication.titre}}</i>{% if publication.revue %}, 
         {{publication.revue}}{% endif %}{% if publication.annee %}, 
         {{publication.annee}}{% endif %}{% if publication.editeur %}, 
